syntax = "proto3";
message StartGameMsg {
    
}